updated html and css

--- a/public/ourDoctors.html
+++ b/public/ourDoctors.html
@@ -65,11 +65,11 @@
   </nav>
 
   <!-- Header -->
-  <header class="bg-primary py-5 mb-5">
+  <header class="py-5 mb-5" id="title-bar">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class="display-4 text-white mt-5 mb-2 text-center">Our Doctors</h1>
+          <h1 class="display-4 text-white mt-5 mb-2 text-center"><span style="color:#FC9838">Our Doctors</span></h1>
           <p class="lead mb-3 text-white text-center">Our doctors are here to provide you with the best possible care
           </p>
         </div>
@@ -83,9 +83,10 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-md-8 mb-5">
+      <div class="col-md-8 mb-5 ">
         <h2>Dr. Ryan Unger</h2>
         <hr>
+        <img src="./pictures/RyanUnger.jpg" class="rounded mb-4 mr-4 float-left" alt="Dr.Ryan Unger">
         <p>Born in Oberlin, KS, Dr. Unger was a graduate of DCHS. He attended
           Kansas State University. Dr. Unger earned his B.S. degree in General
           Science and his Doctor of Chiropractic Degree in 2000 from Palmer
@@ -104,29 +105,52 @@
           nutrition, and low level laser, so that all patients receive the best
           possible care.
         </p>
-        <a class="btn btn-outline-primary mt-3 mb-3" href="#">Call to Action &raquo;</a>
       </div>
-      <div class="col-md-4 mb-5">
+
+      <!-- Sidebar -->
+
+      <div class="col-md-4 mb-5 ">
         <h2>Contact Us</h2>
         <hr>
         <address>
           <strong><span style="color:#13315C">Oberlin Clinic</span></strong>
           <br>504 N Penn Ave
           <br>Oberlin, KS 67749
-          <br>Phone: (785) 332-2186
+          <br>Phone: (785) 475-2219
+          <br>Fax: (785) 475-2219
         </address>
         <address>
           <strong><span style="color:#13315C">St. Francis Clinic</span></strong>
           <br>120 N Scott St
           <br>St. Francis, KS 67756
-          <br>Phone: (785) 475-2219
-          <br>Fax: (785) 475-2210
+          <br>Phone: (785) 332-2186
         </address>
+        <a class="btn btn-outline-primary mt-3 mb-3" href="./contactUs.html">View Available Office Hours &raquo;</a>
+      </div>
 
+      <!-- /Sidebar -->
+
+
+      <div class="col-md-8 mb-5">
+        <h2>Dr. Shannon Addleman</h2>
+        <hr>
+        <img src="./pictures/ShannonAddleman.jpg" class="rounded mb-4 mr-4 float-left" alt="Dr.ShannonAddleman">
+        <p>A former Oberlin resident and graduate of DCHS, Dr. Addleman earned her
+          chiropractic degree in 1998 at National College of Chiropractic, same
+          college as Dr. Fair. She has two children, Brynna and Bryant.
+        </p>
+        <p>Experienced in the "Thompson Techinique", Dr. Addleman brings with her a
+          special adjusting table to offer the patients a different approach to
+          wellness care. Dr. Addleman also utilizes the Koren Specific technique.
+        </p>
+        <p>
+          Dr. Addleman joined Fair Chiropractic Clinic in May, 2007. She has
+          practiced chiropractic in Colorado and in areas of Chicago, Illinois.
+        </p>
       </div>
     </div>
   </div>
-  <!-- /.row -->
+
 
 
   <!-- Weather Widget -->
