--- a/public/services.html
+++ b/public/services.html
@@ -1,134 +1,233 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Unger Chiropractic</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-    <!-- Own CSS -->
-    <link rel="stylesheet" href="/css/index.css" />
-  </head>
 
-  <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Unger Chriopractic</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Unger Chiropractic</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- font awesome css -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <!-- Google Fonts CSS -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+  <!-- Own CSS -->
+  <link rel="stylesheet" href="./css/index.css" />
+
+</head>
+
+<body>
+  <!-- Navigation -->
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Unger Chiropractic</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ourDoctors.html">Our Doctors</a>
+            <a class="nav-link" href="services.html" target="blank">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
+            <a class="nav-link" href="./bodylight.html" target="blank">Bodylight Fat Reduction</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="bodylight.html"
-              >Bodylight Fat Reduction</a
-            >
+            <a class="nav-link" href="./massage.html" target="blank">Massage</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="massage.html">Massage</a>
+            <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="firstVisit.html">First Visit</a>
+            <a class="nav-link" href="#" target="blank">Patient Downloads</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contactUs.html">Contact Us</a>
+            <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="cdlMedicalExam.html">CDL Medical Exam</a>
+            <a class="nav-link" href="./contactUs.html" target="blank">Contact Us</a>
           </li>
+          <!-- Social Icons -->
+          <li><a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><i
+                class="fab fa-facebook"></i></a></li>
+          <!-- /.row -->
         </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- Services section-->
-    <section id="services">
-      <h1>Services</h1>
-
-      <div class="row">
-        <div class="col-sm-6">
-            <h3>Chiropractic Treatment</h3>
-
-            <p>
-              The doctor of chiropractic is a specialist in spinal musculoskeletal
-              disorders. We are expertly trained to diagnose and treat the many
-              musculoskeletal injuries that may occur on the job, in sports, or in
-              your daily life.
-            </p>
-      
-            <p>
-              Upon injury, the individual often alters the normal position or
-              flexibility of the spinal vertebrae. Chiropractic treatment is designed
-              to restore normal alignment and thus minimize pain and suffering. Gentle
-              manipulative adjustments are often effective in rapidly returning the
-              injured person to a productive status. The doctor of chiropractic can
-              also provide guidance with advice designed to reduce work-related
-              injuries, proper lifting procedures and therapeutic stretching
-              exercises.
-            </p>
-        </div>
-        <div class="col-sm-6">
-            <h4>Techniques Utilized:</h4>
-
-            <ul class="services-techniques-used">
-              <li>Applied Kinesiology (AK)</li>
-              <li>Allergy/Sensitivity Elimination and Reprogramming Technique</li>
-              <li>Chromatherapy (Color)</li>
-              <li>Low Level Laser Therapy</li>
-              <li>Detoxification Therapy (EB-305)</li>
-              <li>Electrical Muscle Stimulation</li>
-              <li>Emotional Therapy</li>
-              <li>Eyelight Therapy</li>
-              <li>Magnetic Field Therapy</li>
-              <li>Myofascial Release</li>
-              <li>Neurofeedback</li>
-              <li>Nutritional consultation</li>
-              <li>Ultrasound</li>
-              <li>Orthotics</li>
-            </ul>
+  <!-- Header -->
+  <header class="py-5 mb-5" id="title-bar">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-lg-12">
+          <h1 class="display-4 text-white mt-5 mb-2 text-center"><span style="color:#FC9838">Services</span></h1>
+          <p class="lead mb-3 text-white text-center">Our doctors are here to provide you with the best possible care
+          </p>
         </div>
       </div>
-    </section>
+    </div>
+  </header>
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"
-    ></script>
+  <!-- / Row -->
 
-    <!-- Own Javascript -->
-    <script src="/js/index.js"></script>
-  </body>
+  <!-- Page Content -->
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-8 mb-5 ">
+        <h2>Chiropractic Treatment</h2>
+        <hr>
+        <p>The doctor of chiropractic is a specialist in spinal musculoskeletal disorders. We are expertly trained to
+          diagnose and treat the many musculoskeletal injuries that may occur on the job, in sports, or in your daily
+          life.
+          Upon injury, the individual often alters the normal position or flexibility of the spinal vertebrae.
+          Chiropractic treatment is designed to restore normal alignment and thus minimize pain and suffering. Gentle
+          manipulative adjustments are often effective in rapidly returning the injured person to a productive status.
+          The doctor of chiropractic can also provide guidance with advice designed to reduce work-related injuries,
+          proper lifting procedures and therapeutic stretching exercises.</p>
+        <br>
+        <h2>Techniques Utilized:</h2>
+        <ul class="list-group">
+          <li>Applied Kinesiology (AK)</li>
+          <li>Allergy/Sensitivity Elimination and Reprogramming Technique</li>
+          <li>Chromatherapy (Color)</li>
+          <li>Low Level Laser Therapy</li>
+          <li>Detoxification Therapy (EB-305)</li>
+          <li>Electrical Muscle Stimulation</li>
+          <li>Emotional Therapy</li>
+          <li>Eyelight Therapy</li>
+          <li>Magnetic Field Therapy</li>
+          <li>Myofascial Release</li>
+          <li>Neurofeedback</li>
+          <li>Nutritional consultation</li>
+          <li>Ultrasound</li>
+          <li>Orthotics</li>
+        </ul>
+      </div>
+
+      <!-- Sidebar -->
+
+      <div class="col-md-4 mb-5 ">
+        <h2>Contact Us</h2>
+        <hr>
+        <address>
+          <strong><span style="color:#13315C">Oberlin Clinic</span></strong>
+          <br>504 N Penn Ave
+          <br>Oberlin, KS 67749
+          <br>Phone: (785) 475-2219
+          <br>Fax: (785) 475-2219
+        </address>
+        <address>
+          <strong><span style="color:#13315C">St. Francis Clinic</span></strong>
+          <br>120 N Scott St
+          <br>St. Francis, KS 67756
+          <br>Phone: (785) 332-2186
+        </address>
+        <a class="btn btn-outline-primary mt-3 mb-3" href="./contactUs.html">View Available Office Hours &raquo;</a>
+
+      </div>
+      <!-- /Sidebar -->
+    </div>
+  </div>
+
+
+
+  <!-- Weather Widget -->
+
+  <a class="weatherwidget-io" href="https://forecast7.com/en/39d82n100d53/oberlin/?unit=us" data-label_1="OBERLIN"
+    data-label_2="WEATHER" data-theme="original">OBERLIN WEATHER</a>
+  </div>
+
+  <!-- /.row -->
+
+  <!-- Footer -->
+  <footer class="py-5">
+
+    <div class="container pt-3">
+      <div class="row">
+        <!-- Column 1 -->
+        <div class="col-md-4">
+          <h6 class="font-weight-bold">Unger Chiropractic</h6>
+          <div class="h-divider mt-3 mb-3 w-50"></div>
+          <p>Your journey to superior healing and total wellness can begin today.</p>
+          <p>We do not discriminate. Please view our policy. Unger Chiropractic Nondiscrimination
+            policy.pdf&nbsp;<a href="#" class="button" download>
+              <i class="fa fa-download text-white"></i></a>
+          </p>
+        </div>
+        <!-- Column 2 -->
+        <div class="col-md-4">
+          <h6><strong>Useful Links</strong></h6>
+          <div class="h-divider mt-3 mb-3 w-50"></div>
+          <nav class="nav flex-column pb-4">
+            <a class="nav-link pl-0" href="./ourDoctors.html" target="blank">Our Doctors</a>
+            <a class="nav-link pl-0" href="./services.html" target="blank">Services</a>
+            <a class="nav-link pl-0" href="./bodylight.html" target="blank">Bodylight Fat Reduction</a>
+            <a class="nav-link pl-0" href="./massage.html" target="blank">Massage</a>
+            <a class="nav-link pl-0" href="./firstVisit.html" target="blank">First Visit</a>
+            <a class="nav-link pl-0" href="./" target="blank">Patient Downloads</a>
+            <a class="nav-link pl-0" href="./cdlMedicalExam.html" target="blank">CDL Medical Exams</a>
+          </nav>
+        </div>
+        <hr>
+        <!-- Column 3 -->
+        <div class="col-md-4">
+          <h6><strong>Contact</strong></h6>
+          <div class="h-divider mt-3 mb-3 w-50"></div>
+          <h6><strong>Oberlin Clinic:</strong></h6>
+          <p>504 N Penn Ave
+            Oberlin, KS 67749<br>
+            Phone: (785) 475-2219<br>
+            Fax: (785) 475-2210
+          </p>
+          <h6><strong>St. Francis Clinic:</strong></h6>
+          <p>120 N Scott St
+            St. Francis, KS 67756<br>
+            Phone: (785) 332-2186
+          </p>
+          <a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><i
+              class="fab fa-facebook-f"></i>
+
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- /.container -->
+
+  <!-- Copyright -->
+  <footer class="py-2 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white" id="copyright">Copyright &copy;2019 Unger Chiropractic Clinic. All rights
+        reserved.</p>
+  </footer>
+  <!-- /.container -->
+
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+  </script>
+
+  <!-- Own Javascript -->
+  <script src="./js/index.js"></script>
+  </div>
+</body>
+
+
 </html>
