updated html and css

--- a/public/ourDoctors.html
+++ b/public/ourDoctors.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <!-- Google Fonts CSS -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,700|Roboto" rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
@@ -105,6 +105,21 @@
           nutrition, and low level laser, so that all patients receive the best
           possible care.
         </p>
+        <h2 class="mt-5">Dr. Shannon Addleman</h2>
+        <hr>
+        <img src="./pictures/ShannonAddleman.jpg" class="rounded mb-4 mr-4 float-left" alt="Dr.ShannonAddleman">
+        <p>A former Oberlin resident and graduate of DCHS, Dr. Addleman earned her
+          chiropractic degree in 1998 at National College of Chiropractic, same
+          college as Dr. Fair. She has two children, Brynna and Bryant.
+        </p>
+        <p>Experienced in the "Thompson Techinique", Dr. Addleman brings with her a
+          special adjusting table to offer the patients a different approach to
+          wellness care. Dr. Addleman also utilizes the Koren Specific technique.
+        </p>
+        <p>
+          Dr. Addleman joined Fair Chiropractic Clinic in May, 2007. She has
+          practiced chiropractic in Colorado and in areas of Chicago, Illinois.
+        </p>
       </div>
 
       <!-- Sidebar -->
@@ -130,24 +145,6 @@
 
       <!-- /Sidebar -->
 
-
-      <div class="col-md-8 mb-5">
-        <h2>Dr. Shannon Addleman</h2>
-        <hr>
-        <img src="./pictures/ShannonAddleman.jpg" class="rounded mb-4 mr-4 float-left" alt="Dr.ShannonAddleman">
-        <p>A former Oberlin resident and graduate of DCHS, Dr. Addleman earned her
-          chiropractic degree in 1998 at National College of Chiropractic, same
-          college as Dr. Fair. She has two children, Brynna and Bryant.
-        </p>
-        <p>Experienced in the "Thompson Techinique", Dr. Addleman brings with her a
-          special adjusting table to offer the patients a different approach to
-          wellness care. Dr. Addleman also utilizes the Koren Specific technique.
-        </p>
-        <p>
-          Dr. Addleman joined Fair Chiropractic Clinic in May, 2007. She has
-          practiced chiropractic in Colorado and in areas of Chicago, Illinois.
-        </p>
-      </div>
     </div>
   </div>
 
