--- a/public/services.html
+++ b/public/services.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <!-- Google Fonts CSS -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,700|Roboto" rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
@@ -97,18 +97,18 @@
         <br>
         <h2>Techniques Utilized:</h2>
         <ul class="list-group">
-          <li>Applied Kinesiology (AK)</li>
-          <li>Allergy/Sensitivity Elimination and Reprogramming Technique</li>
+          <li><a href="#">Applied Kinesiology (AK)</a></li>
+          <li><a href="#">Allergy/Sensitivity Elimination and Reprogramming Technique</a></li>
           <li>Chromatherapy (Color)</li>
-          <li>Low Level Laser Therapy</li>
-          <li>Detoxification Therapy (EB-305)</li>
+          <li><a href="#">Low Level Laser Therapy</a></li>
+          <li><a href="#">Detoxification Therapy (EB-305)</a></li>
           <li>Electrical Muscle Stimulation</li>
           <li>Emotional Therapy</li>
           <li>Eyelight Therapy</li>
           <li>Magnetic Field Therapy</li>
           <li>Myofascial Release</li>
           <li>Neurofeedback</li>
-          <li>Nutritional consultation</li>
+          <li><a href="#">Nutritional consultation</a></li>
           <li>Ultrasound</li>
           <li>Orthotics</li>
         </ul>
