updated html and css

--- a/public/bodylight.html
+++ b/public/bodylight.html
@@ -85,7 +85,8 @@
     <div class="row">
       <div class="col-md-8 mb-5 ">
         <h2>SlimCO Bodylight Fat Reduction and Facial Rejuvenation</h2><img
-          src="./pictures/Unit-Pic2-transparent-copy.png" class="float-right mx-auto d-block bodylight-image">
+          src="./pictures/Unit-Pic2-transparent-copy.png"
+          class="float-right mx-auto d-block bodylight-image img-responsive">
         <p class="bold"><i class="fa fa-check"></i>
           <span style="color:#3E7CF9"> Unlike invasive weight loss surger, our procedure is applied externally.</span>
         </p>
@@ -117,6 +118,7 @@
           Slim
           Co weight loss system, you can simply lie down, relax, and let the Slim Co do all the work.</p>
         <br>
+
         <!-- Testimonial -->
         <div class="row mb-5">
           <div class="col-md-12 col d-flex justify-content-center">
@@ -138,7 +140,7 @@
         </div>
         <!-- /Testimonial -->
 
-        <h2>About Bodylight Sessions:</h2>
+        <h2 class="">About Bodylight Sessions:</h2>
         <p>Bodylight sessions have the ability to reduce body mass through simple, painless, and noninvasive
           techniques. We target the areas of the body that tend to be difficult to target through diet and exercise.
           With the
@@ -158,6 +160,21 @@
         <p>Results may vary from person to person due to lifestyle, body type and dedication to the program. No
           individual results should be seen as typical. Testimonials are stories of individual success and should not
           be taken as a guarantee. </p>
+        <br>
+        <h2 class="text-center mb-4"><span style="color:#F85C39">View Bodylight Before and After Pictures</span></h2>
+        <h2 class="mt-5">Facial Rejuvenation</h2>
+        <img src="./pictures/Facial_Rejuvination_2.jpg" class="img-responsive mb-4" style="width: 100%"
+          alt="Facial Rejuvenation">
+        <p>BodyLight lightwave technology stimulates the production of collagen and elastin in your skin cells for a
+          pain-free, surgery-free alternative for facial rejuvenation</p>
+        <p>Our facial therapy can help reverse signs of aging by tightening skin, reducing the appearance of fine lines
+          and/or wrinkles, lightening again spots and also lightening dark under eye circles. Bodylight facial therapy
+          also helps smooth facial blemishes adn dramatically improves the complexion of skin damaged by acne or sun</p>
+        <p>For a younger natural appearance, try Bodylight Facial Rejuvenation</p>
+        <br>
+        <p class="statement">These statements have not been evaluated by the Food adn Drug Administration. This product
+          is not intended to diagnose, treat, cure or prevent any disease.</p>
+
       </div>
 
       <!-- Sidebar -->
@@ -261,7 +278,7 @@
         </div>
         <hr>
         <!-- Column 3 -->
-        <div class="col-md-4">
+        <div class="col-md-4 footer">
           <h6><strong>Contact</strong></h6>
           <div class="h-divider mt-3 mb-3 w-50"></div>
           <h6><strong>Oberlin Clinic:</strong></h6>
