--- a/public/ourDoctors.html
+++ b/public/ourDoctors.html
@@ -69,8 +69,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class="display-4 text-white mt-5 mb-2 text-center"><span style="color:#FC9838">Our Doctors</span></h1>
-          <p class="lead mb-3 text-white text-center">Our doctors are here to provide you with the best possible care
+          <h1 class=" mb-2 text-center" id="titlebar-heading">Our Doctors</h1>
           </p>
         </div>
       </div>
@@ -85,7 +84,7 @@
     <div class="row">
       <div class="col-md-8 mb-5 ">
         <h2>Dr. Ryan Unger</h2>
-        <hr>
+
         <img src="./pictures/RyanUnger.jpg" class="rounded mb-4 mr-4 float-left" alt="Dr.Ryan Unger">
         <p>Born in Oberlin, KS, Dr. Unger was a graduate of DCHS. He attended
           Kansas State University. Dr. Unger earned his B.S. degree in General
@@ -106,8 +105,8 @@
           possible care.
         </p>
         <h2 class="mt-5">Dr. Shannon Addleman</h2>
-        <hr>
-        <img src="./pictures/ShannonAddleman.jpg" class="rounded mb-4 mr-4 float-left" alt="Dr.ShannonAddleman">
+
+        <img src="./pictures/ShannonAddleman.jpg" class="rounded mb-4 mr-4 float-left" alt="Dr.Shannon Addleman">
         <p>A former Oberlin resident and graduate of DCHS, Dr. Addleman earned her
           chiropractic degree in 1998 at National College of Chiropractic, same
           college as Dr. Fair. She has two children, Brynna and Bryant.
