--- a/public/patientdownloads.html
+++ b/public/patientdownloads.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html" target="blank">Services</a>
+            <a class="nav-link" href="./services.html" target="blank">Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./bodylight.html" target="blank">Bodylight Fat Reduction</a>
@@ -47,7 +47,7 @@
             <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="blank">Patient Downloads</a>
+            <a class="nav-link" href="./patientdownloads.html" target="blank">Patient Downloads</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
@@ -69,8 +69,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">First Visit</h1>
-          <p class="lead text-center bold">What Can I Expect During My First Visit to a Chiropractor?</p>
+          <h1 class=" mb-2 text-center" id="titlebar-heading">Patient Downloads</h1>
           </p>
         </div>
       </div>
@@ -83,9 +82,10 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-md-8 mb-5">
+      <div class="col-md-8 mb-5 ">
         <img src="./pictures/DoctorVisit.jpg" class="img-responsive mb-4" style="width: 100%" alt="Doctor Visit">
         <h2>Consultation</h2>
+        <hr>
         <p>On your first visit to our office you will be welcomed by our receptionist with a warm smile. You will then
           be asked to fill out our required forms which will help us gain some information about yourself and your
           spinal health. Save time by filling out the forms ahead of time. <a href="./patientdownloads.html">Click
@@ -96,77 +96,16 @@
           will be referred to a doctor that will be able to help you the most. However, if our doctor feels he can help
           you, we will begin our examination with your consent. Through out this process, our focus is to help you
           achieve your optimal health potential.</p>
-        </row>
-
-        <div class="row">
-          <div class="col-md-12 mt-5 p-5 bg-light">
-            <h2>Examination</h2>
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
-
-            <p>After a thorough consultation with the doctor, you will undergo a chiropractic
-              examination. This will
-              include
-              testing your reflexes and range of motion as well as other standard orthopedic, neurologic, postural, and
-              physical examinations. From this, the doctor will gain valuable information regarding your condition and a
-              better understanding of how chiropractic can help you. If necessary, the doctor may recommend X-rays or
-              refer
-              you for additional testing procedures.</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-12 p-5">
-            <h2>X-Ray</h2>
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
-
-            <p>X-rays are sometimes required to get a full evaluation of a patient's condition. The need for X-ray is
-              considered on a case by case basis. However, if needed, our office has an on-site, state of the art x-ray
-              facility for your convenience.</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-12 p-5 bg-light">
-            <h2>Spinal Adjustment</h2>
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
-            <p>If both you and the doctor decide that chiropractic care is appropriate, spinal adjustments will begin
-              immediately. Other treatment may include low level laser, physical therapies , and/or soft tissue
-              therapies.
-              Most of our patients begin to see results from the very first spinal adjustment. Our special gentle, yet
-              effective, alignment of the body is interactive with the patient; gentle enough for kids, yet able to
-              restore
-              function and movement for the athlete and senior.</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-12 p-5 ">
-
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
-            <h2>Home Instructions</h2>
-            <p>Prior to leaving, patients will be given instructions on certain activities or procedures to be conducted
-              at home. This may include ice or heat application instructions, avoidance of certain activities or
-              positions, as well as home exercises and/or stretches.</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-12 mb-2 p-5 bg-light">
-            <h2>Schedule Your Appointment</h2>
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
-
-            <p>You will be given a convenient appointment time for your follow-up visit. Generally speaking, patients
-              are seen within 1-2 days and are provided with a complete review of findings.</p>
-          </div>
-        </div>
-
+        <br>
+        <h2>Examination</h2>
+        <hr>
+        <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left" alt="Kirsten Lavers">
+        <p>After a thorough consultation with the doctor, you will undergo a chiropractic examination. This will include
+          testing your reflexes and range of motion as well as other standard orthopedic, neurologic, postural, and
+          physical examinations. From this, the doctor will gain valuable information regarding your condition and a
+          better understanding of how chiropractic can help you. If necessary, the doctor may recommend X-rays or refer
+          you for additional testing procedures.</p>
       </div>
-
 
       <!-- Sidebar -->
 
