--- a/public/services.html
+++ b/public/services.html
@@ -69,8 +69,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class="display-4 text-white mt-5 mb-2 text-center"><span style="color:#FC9838">Services</span></h1>
-          <p class="lead mb-3 text-white text-center">Our doctors are here to provide you with the best possible care
+          <h1 class=" mb-2 text-center" id="titlebar-heading">Services</h1>
           </p>
         </div>
       </div>
@@ -84,6 +83,8 @@
 
     <div class="row">
       <div class="col-md-8 mb-5 ">
+        <img src="./pictures/treatment.jpg" class="img-responsive mb-4" style="width: 100%"
+          alt="Chiropractor Treatment">
         <h2>Chiropractic Treatment</h2>
         <hr>
         <p>The doctor of chiropractic is a specialist in spinal musculoskeletal disorders. We are expertly trained to
