updated html and css

--- a/public/bodylight.html
+++ b/public/bodylight.html
@@ -47,7 +47,7 @@
             <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="blank">Patient Downloads</a>
+            <a class="nav-link" href="./patientdownloads.html" target="blank">Patient Downloads</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
@@ -88,7 +88,7 @@
           src="./pictures/Unit-Pic2-transparent-copy.png"
           class="float-right mx-auto d-block bodylight-image img-responsive">
         <p class="bold"><i class="fa fa-check"></i>
-          <span style="color:#3E7CF9"> Unlike invasive weight loss surger, our procedure is applied externally.</span>
+          <span style="color:#3E7CF9"> Unlike invasive weight loss surgery, our procedure is applied externally.</span>
         </p>
         <p class="bold"><i class="fa fa-check"></i>
           <span style="color:#3E7CF9"> This revolutionary method provides results without the dangers associated with
@@ -202,7 +202,7 @@
         <div class="card mb-5 mb-lg-0 mt-5">
           <div class="icon mt-3 text-center"><img src="./pictures/weight-scale.png"></div>
           <div class="card-body pricing">
-            <h5 class="card-title text-muted text-uppercase text-center mt-0">Expedited Bodylight Session</h5>
+            <h5 class="card-title text-center mt-0">Expedited Bodylight Session</h5>
             <h6 class="card-price text-center"><span style="color: #13315C;">$50</span></h6>
             <hr>
             <i class="fas fa-check"></i><span>&nbsp 15 Minute Bodylight</span>
@@ -216,7 +216,7 @@
         <div class="card mb-5 mb-lg-0 mt-5">
           <div class="icon mt-3 text-center"><img src="./pictures/measuring-tape.png"></div>
           <div class="card-body pricing">
-            <h5 class="card-title text-muted text-uppercase text-center mt-0">Complete Bodylight Session</h5>
+            <h5 class="card-title  text-center mt-0">Complete Bodylight Session</h5>
             <h6 class="card-price text-center"><span style="color: #13315C;">$65</span></h6>
             <hr>
             <i class="fas fa-check"></i><span>&nbsp 15 minute Bodylight</span>
