--- a/public/firstVisit.html
+++ b/public/firstVisit.html
@@ -47,7 +47,7 @@
             <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="blank">Patient Downloads</a>
+            <a class="nav-link" href="./patientdownloads.html" target="blank">Patient Downloads</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
@@ -103,7 +103,6 @@
             <h2>Examination</h2>
             <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
               alt="Kirsten Lavers">
-
             <p>After a thorough consultation with the doctor, you will undergo a chiropractic
               examination. This will
               include
@@ -145,9 +144,9 @@
         <div class="row">
           <div class="col-md-12 p-5 ">
 
+            <h2>Home Instructions</h2>
             <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
               alt="Kirsten Lavers">
-            <h2>Home Instructions</h2>
             <p>Prior to leaving, patients will be given instructions on certain activities or procedures to be conducted
               at home. This may include ice or heat application instructions, avoidance of certain activities or
               positions, as well as home exercises and/or stretches.</p>
