--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
             <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="blank">Patient Downloads</a>
+            <a class="nav-link" href="./patientdownloads.html" target="blank">Patient Downloads</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
@@ -157,15 +157,17 @@
   <!-- /.row -->
 
   <!-- Business Callout -->
-  <div class="container-fluid mt-5 mb-5">
-    <div class="row justify-content-center align-items-center callout p-4 border border-light">
-      <div class="col-sm col-md-auto">
+  <div class="container-fluid mt-5 mb-5 mx-auto">
+    <div class="row justify-content-center callout p-4">
+      <div class="col-sm text-center">
         <h3 class="text-center"></i><span style="color:#FC9838">Start your journey to complete
             wellness. Call us for an
             appointment today.</span>
         </h3>
         <h5 class="text-white text-center">Oberlin Office: 785-475-2219</h5>
         <h5 class="text-white text-center">St. Francis Clinic: 785-332-2186</h5>
+        <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" target="_blank">View Available Office Hours
+          &raquo;</a>
       </div>
     </div>
   </div>
@@ -185,7 +187,7 @@
       </div>
       <div class="col-lg-6">
         <div class="card h-100 shadow-lg p-3 bg-white rounded border-0">
-          <img class="img-fluid rounded" src="./pictures/applied_kinesiology_2.jpg" alt="applied kinesiology">
+          <img class="img-fluid rounded" src="./pictures/treatment.jpg" alt="applied kinesiology">
         </div>
       </div>
     </div>
