--- a/public/services.html
+++ b/public/services.html
@@ -47,7 +47,7 @@
             <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="blank">Patient Downloads</a>
+            <a class="nav-link" href="./patientdownloads.html" target="blank">Patient Downloads</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
@@ -86,7 +86,6 @@
         <img src="./pictures/treatment.jpg" class="img-responsive mb-4" style="width: 100%"
           alt="Chiropractor Treatment">
         <h2>Chiropractic Treatment</h2>
-        <hr>
         <p>The doctor of chiropractic is a specialist in spinal musculoskeletal disorders. We are expertly trained to
           diagnose and treat the many musculoskeletal injuries that may occur on the job, in sports, or in your daily
           life.
