--- a/public/ourDoctors.html
+++ b/public/ourDoctors.html
@@ -47,7 +47,7 @@
             <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="blank">Patient Downloads</a>
+            <a class="nav-link" href="./patientdownloads.html" target="blank">Patient Downloads</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
