--- a/public/patientdownloads.html
+++ b/public/patientdownloads.html
@@ -83,28 +83,29 @@
 
     <div class="row">
       <div class="col-md-8 mb-5 ">
-        <img src="./pictures/DoctorVisit.jpg" class="img-responsive mb-4" style="width: 100%" alt="Doctor Visit">
-        <h2>Consultation</h2>
-        <hr>
-        <p>On your first visit to our office you will be welcomed by our receptionist with a warm smile. You will then
-          be asked to fill out our required forms which will help us gain some information about yourself and your
-          spinal health. Save time by filling out the forms ahead of time. <a href="./patientdownloads.html">Click
-            Here!</a>
-
-          After reviewing your case history, you and the doctor will discuss your condition to determine if chiropractic
-          care may be of benefit to you. If we find that your condition would be better served by another physician, you
-          will be referred to a doctor that will be able to help you the most. However, if our doctor feels he can help
-          you, we will begin our examination with your consent. Through out this process, our focus is to help you
-          achieve your optimal health potential.</p>
-        <br>
-        <h2>Examination</h2>
-        <hr>
-        <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left" alt="Kirsten Lavers">
-        <p>After a thorough consultation with the doctor, you will undergo a chiropractic examination. This will include
-          testing your reflexes and range of motion as well as other standard orthopedic, neurologic, postural, and
-          physical examinations. From this, the doctor will gain valuable information regarding your condition and a
-          better understanding of how chiropractic can help you. If necessary, the doctor may recommend X-rays or refer
-          you for additional testing procedures.</p>
+        <img src="./pictures/Sarahgreetingpatient.jpg" class="img-responsive mb-4" style="width: 100%"
+          alt="Doctor Visit">
+        <h2>Patient Downloads</h2>
+        <p>Welcome to the world of Electronic Health Recordkeeping. Unger Chiropractic Clinic has created a secure
+          electronic patient
+          record for you.</p>
+        <div class="bg-light p-5 mb-4">
+          <p class="bold">To register, you will be required to provide the following information:</p>
+          <p class="bold"><i class="fas fa-asterisk"></i>
+            <span style="color:#3E7CF9">Your patient PIN# (request this from our office)</span>
+          </p>
+          <p class="bold"><i class="fas fa-asterisk"></i>
+            <span style="color:#3E7CF9">Your email address</span>
+          </p>
+          <p class="bold"><i class="fas fa-asterisk"></i>
+            <span style="color:#3E7CF9">A password</span>
+          </p>
+          <p>After registering, you will receive an activation email. When you receive the activation email, follow the
+            instructions to activate your account and access it securely.</p>
+        </div>
+        <p class="bold">Visit Patient Downloads:</p>
+        <a href="http://www.ungerchiropractic.medicfusion.com"
+          target="_blank">http://www.ungerchiropractic.medicfusion.com</a>
       </div>
 
       <!-- Sidebar -->
